@@ -41,6 +41,9 @@
   misc/ultoa
   string/memchr
   string/memccpy
+  string/strchr
+  string/strrchr
+  string/strstr
 
 *** Changes in avr-libc-1.2.5:
 
